--- a/SchulCloud.AppHost/appsettings.json
+++ b/SchulCloud.AppHost/appsettings.json
@@ -14,6 +14,10 @@
     "Username": "<maildev username>",
     "Password": "<maildev password>"
   },
+  "minio-storage": {
+    "Username": "<MinIO username>",
+    "Password": "<MinIO password>"
+  },
   "CommandApiKey": "<api key for commands>",
   "ReverseProxy": {
     "Clusters": {
