Added REST API endpoints and docs for get/update/delete a users' profile image -Added store for profile image -Added user manager implementations for profile images -Added abstractions and store implementations for file storage -Removed await from AwsS3 client factory -Moved Aspire projects and clients into a folder

--- a/SchulCloud.RestApi/SchulCloud.RestApi.csproj
+++ b/SchulCloud.RestApi/SchulCloud.RestApi.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SchulCloud.Authentication\SchulCloud.Authentication.csproj" />
     <ProjectReference Include="..\SchulCloud.Database\SchulCloud.Database.csproj" />
+    <ProjectReference Include="..\SchulCloud.FileStorage.S3\SchulCloud.FileStorage.S3.csproj" />
     <ProjectReference Include="..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" />
     <ProjectReference Include="..\SchulCloud.Identity\SchulCloud.Identity.csproj" />
   </ItemGroup>
