--- a/SchulCloud.Identity/SchulCloud.Identity.csproj
+++ b/SchulCloud.Identity/SchulCloud.Identity.csproj
@@ -14,9 +14,11 @@
     <PackageReference Include="Fido2" Version="4.0.0-beta.16" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="3.0.11" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SchulCloud.Authorization\SchulCloud.Authorization.csproj" />
+    <ProjectReference Include="..\SchulCloud.FileStorage\SchulCloud.FileStorage.csproj" />
   </ItemGroup>
 </Project>
