--- a/SchulCloud.RestApi/appsettings.Development.json
+++ b/SchulCloud.RestApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "S3": {
+    "BucketName": "schulcloud"
   }
 }
