Added the profile image to the MainLayout -Extracted user image and name display into a reusable component -Added the minio storage to the frontend -Moved some components around

--- a/SchulCloud.Frontend/appsettings.Development.json
+++ b/SchulCloud.Frontend/appsettings.Development.json
@@ -26,6 +26,9 @@
       "RequireConfirmedAccount": false
     }
   },
+  "S3": {
+    "BucketName": "schulcloud"
+  },
   "Fido2": {
     "ServerDomain": "localhost",
     "Origins": [
