--- a/SchulCloud.Frontend/SchulCloud.Frontend.csproj
+++ b/SchulCloud.Frontend/SchulCloud.Frontend.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MailKit.Client\MailKit.Client.csproj" />
     <ProjectReference Include="..\SchulCloud.Authorization\SchulCloud.Authorization.csproj" />
+    <ProjectReference Include="..\SchulCloud.FileStorage.S3\SchulCloud.FileStorage.S3.csproj" />
     <ProjectReference Include="..\SchulCloud.Identity\SchulCloud.Identity.csproj" />
     <ProjectReference Include="..\SchulCloud.Database\SchulCloud.Database.csproj" />
     <ProjectReference Include="..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" />
