Added a MinIOBucketResource to provide aspire managed bucket name

--- a/SchulCloud.AppHost/appsettings.json
+++ b/SchulCloud.AppHost/appsettings.json
@@ -14,7 +14,7 @@
     "Username": "<maildev username>",
     "Password": "<maildev password>"
   },
-  "minio-storage": {
+  "minio-server": {
     "Username": "<MinIO username>",
     "Password": "<MinIO password>"
   },
