Improved profile image error and AWS S3 error handling -Improved the API error response if an identity error occurrs -Moved custom identity errors into ExtendedIdentityErrorDescriber -Fixed a possible null reference error in MinIOServerResource

--- a/SchulCloud.Frontend/appsettings.json
+++ b/SchulCloud.Frontend/appsettings.json
@@ -3,8 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "MudBlazor.KeyInterceptorService": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      "Microsoft.AspNetCore.Identity.UserManager": "Information",
+      "MudBlazor.KeyInterceptorService": "Information"
     }
   },
   "AllowedHosts": "*",
