--- a/SchulCloud.Frontend/appsettings.json
+++ b/SchulCloud.Frontend/appsettings.json
@@ -67,7 +67,7 @@
     "ApplicationName": "SchulCloud",
     "Favicons": [
       {
-        "Path": "/_content/favicon.svg",
+        "Path": "_content/favicon.svg",
         "MimeType": "image/svg",
         "Sizes": "any"
       }
